fix css word-wrap: break-word;

--- a/src/assets/scss/sections/pages.scss
+++ b/src/assets/scss/sections/pages.scss
@@ -6,6 +6,7 @@
     padding-top: 18px;
     width: calc(100% - 200px);
     min-height: calc(100% - 56px);
+    word-wrap: break-word;
     .page-header-group {
         display: flex;
         justify-content: space-between;
